📝 Show virtual inner join in mapped (#85)

--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -79,65 +79,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b2e2b3a",
-   "metadata": {},
-   "source": [
-    "We'll need to make a decision on the features that we want to use for training the model.\n",
-    "\n",
-    "Because each file is validated, they're all indexed by `ensembl_gene_id` in the `var` slot of AnnData.\n",
-    "\n",
-    "To make our live easy, we'll intersect features across files:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1bd6fc6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files = dataset_v2.files.all()\n",
-    "# the gene sets are stored in the \"var\" slot of features\n",
-    "shared_genes = files[0].features[\"var\"]\n",
-    "for file in files[1:]:\n",
-    "    # QuerySet objects allow set operations\n",
-    "    shared_genes = shared_genes & file.features[\"var\"]\n",
-    "shared_genes_ensembl = shared_genes.list(\"ensembl_gene_id\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "34b9b0ee",
-   "metadata": {},
-   "source": [
-    "We'll now store the raw representations and create a training dataset:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bddbdc55",
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "raw_files = []\n",
-    "for file in files:\n",
-    "    adata_raw = file.load().raw[:, shared_genes_ensembl].to_adata()\n",
-    "    raw_file = ln.File(adata_raw, description=f\"Raw data of file {file.uid}\")\n",
-    "    raw_files.append(raw_file)\n",
-    "ln.save(raw_files)\n",
-    "\n",
-    "ds_train = ln.Dataset(raw_files, name=\"My training dataset\", version=\"2\")\n",
-    "ds_train.save()\n",
-    "ds_train.view_flow()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "77d7dc38",
    "metadata": {},
    "source": [
@@ -166,10 +107,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86ee1fc7",
+   "id": "5e348b32",
    "metadata": {},
    "source": [
-    "Files in the dataset should have the same variables, we have already taken care of this."
+    "Make a `MappedDataset` object out of `ln.Dataset`. It also does virtual inner join of the variables of the underlying `AnnData` objects."
    ]
   },
   {
@@ -179,7 +120,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_mapped = ds_train.mapped(label_keys=[\"cell_type\"])"
+    "ds_mapped = dataset_v2.mapped(label_keys=[\"cell_type\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "684fdb1c",
+   "metadata": {},
+   "source": [
+    "The intersected variable names can be accessed:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "354f955c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(ds_mapped.var_joint)"
    ]
   },
   {
