--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -341,7 +341,7 @@
    },
    "outputs": [],
    "source": [
-    "file = ln.File.from_anndata(\n",
+    "artifact = ln.Artifact.from_anndata(\n",
     "    adata_validated,\n",
     "    description=\"10x reference adata\",\n",
     "    field=lb.Gene.ensembl_gene_id,\n",
@@ -352,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we do not want to manage the remaining unvalidated terms in registries, we can save and annotate the file:"
+    "As we do not want to manage the remaining unvalidated terms in registries, we can save and annotate the artifact:"
    ]
   },
   {
@@ -361,11 +361,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.save()\n",
-    "file.labels.add(adata_validated.obs.cell_type, features.cell_type)\n",
-    "file.labels.add(organism.human, feature=features.organism)\n",
-    "file.labels.add(experimental_factors.single_cell_rna_sequencing, feature=features.assay)\n",
-    "file.describe()"
+    "artifact.save()\n",
+    "artifact.labels.add(adata_validated.obs.cell_type, features.cell_type)\n",
+    "artifact.labels.add(organism.human, feature=features.organism)\n",
+    "artifact.labels.add(\n",
+    "    experimental_factors.single_cell_rna_sequencing, feature=features.assay\n",
+    ")\n",
+    "artifact.describe()"
    ]
   },
   {
@@ -374,7 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.view_flow()"
+    "artifact.view_flow()"
    ]
   },
   {
@@ -404,7 +406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a new version of the dataset by sharding it across the new `file` and the file underlying version 1 of the dataset:"
+    "Create a new version of the dataset by sharding it across the new `artifact` and the artifact underlying version 1 of the dataset:"
    ]
   },
   {
@@ -418,11 +420,11 @@
    "outputs": [],
    "source": [
     "dataset_v2 = ln.Dataset(\n",
-    "    [file, dataset_v1.file],\n",
+    "    [artifact, dataset_v1.artifact],\n",
     "    is_new_version_of=dataset_v1,\n",
     ")\n",
     "dataset_v2.save()\n",
-    "dataset_v2.labels.add_from(file)\n",
+    "dataset_v2.labels.add_from(artifact)\n",
     "dataset_v2.labels.add_from(dataset_v1)"
    ]
   },
