--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -205,9 +205,9 @@
    },
    "outputs": [],
    "source": [
-    "file = ln.File(\"./figures/pca_itm2b.pdf\", description=\"My result on ITM2B\")\n",
-    "file.save()\n",
-    "file.view_flow()"
+    "artifact = ln.Artifact(\"./figures/pca_itm2b.pdf\", description=\"My result on ITM2B\")\n",
+    "artifact.save()\n",
+    "artifact.view_flow()"
    ]
   },
   {
