--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.File.filter(transform=transform).df()"
+    "ln.Artifact.filter(transform=transform).df()"
    ]
   },
   {
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = ln.File.filter(\n",
+    "query = ln.Artifact.filter(\n",
     "    experimental_factors=assays.single_cell_rna_sequencing,\n",
     "    organism=organism.human,\n",
     "    cell_types=cell_types.gamma_delta_t_cell,\n",
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inspect file metadata"
+    "## Inspect artifact metadata"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_set = ln.File.filter().all()\n",
+    "query_set = ln.Artifact.filter().all()\n",
     "\n",
     "file1, file2 = query_set[0], query_set[1]"
    ]
