--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -13,14 +13,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Query individual files"
+    "# Query artifacts"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we'll query individual files and inspect their metadata.\n",
+    "Here, we'll query artifacts and inspect their metadata.\n",
     "\n",
     "This guide can be skipped if you are only interested in how to leverage the overall dataset."
    ]
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Query files by provenance metadata"
+    "## Query artifacts by provenance metadata"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Query files by biological metadata "
+    "## Query artifacts by biological metadata "
    ]
   },
   {
@@ -143,7 +143,7 @@
    "source": [
     "query_set = ln.Artifact.filter().all()\n",
     "\n",
-    "file1, file2 = query_set[0], query_set[1]"
+    "artifact1, artifact2 = query_set[0], query_set[1]"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file1.describe()"
+    "artifact1.describe()"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file1.view_flow()"
+    "artifact1.view_flow()"
    ]
   },
   {
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file2.describe()"
+    "artifact2.describe()"
    ]
   },
   {
@@ -179,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file2.view_flow()"
+    "artifact2.view_flow()"
    ]
   },
   {
@@ -193,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we compute shared genes without loading files:"
+    "Here we compute shared genes:"
    ]
   },
   {
@@ -202,10 +202,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file1_genes = file1.features[\"var\"]\n",
-    "file2_genes = file2.features[\"var\"]\n",
+    "artifact1_genes = artifact1.features[\"var\"]\n",
+    "artifact2_genes = artifact2.features[\"var\"]\n",
     "\n",
-    "shared_genes = file1_genes & file2_genes\n",
+    "shared_genes = artifact1_genes & artifact2_genes\n",
     "len(shared_genes)"
    ]
   },
@@ -231,10 +231,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file1_celltypes = file1.cell_types.all()\n",
-    "file2_celltypes = file2.cell_types.all()\n",
+    "artifact1_celltypes = artifact1.cell_types.all()\n",
+    "artifact2_celltypes = artifact2.cell_types.all()\n",
     "\n",
-    "shared_celltypes = file1_celltypes & file2_celltypes\n",
+    "shared_celltypes = artifact1_celltypes & artifact2_celltypes\n",
     "shared_celltypes_names = shared_celltypes.list(\"name\")\n",
     "shared_celltypes_names"
    ]
@@ -243,14 +243,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load the individual files"
+    "## Load the individual artifacts"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We could either load the files into memory or access them in `backed` mode through `.backed()` to lazily load their content from the cloud or the disk.display_markdown\n",
+    "We could either load the artifacts into memory or access them in `backed` mode through `.backed()` to lazily load their content.\n",
     "\n",
     "Let's load them into memory:"
    ]
@@ -261,8 +261,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata1 = file1.load()\n",
-    "adata2 = file2.load()"
+    "adata1 = artifact1.load()\n",
+    "adata2 = artifact2.load()"
    ]
   },
   {
@@ -279,7 +279,6 @@
    "outputs": [],
    "source": [
     "adata1_subset = adata1[adata1.obs[\"cell_type\"].isin(shared_celltypes_names)]\n",
-    "\n",
     "adata2_subset = adata2[adata2.obs[\"cell_type\"].isin(shared_celltypes_names)]"
    ]
   }
