--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -71,14 +71,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.files.df()"
+    "dataset.artifacts.df()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the dataset doesn't consist of too many files, we can now load it into memory.\n",
+    "If the dataset isn't too large, we can now load it into memory.\n",
     "\n",
     "Under-the-hood, the `AnnData` objects are concatenated during loading.\n",
     "\n",
