--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "In the [previous tutorial](scrna3), we loaded an entire dataset into memory to perform a simple analysis.\n",
     "\n",
-    "Here, we'll iterate over the files within the dataset to train an ML model."
+    "Here, we'll iterate over the artifacts within the dataset to train an ML model."
    ]
   },
   {
@@ -90,7 +90,7 @@
    "id": "7a6c0000",
    "metadata": {},
    "source": [
-    "If you need to train your model on a list of files, you can use {meth}`~lamindb.Dataset.mapped` with the PyTorch `DataLoader`.\n",
+    "If you need to train your model on a list of artifacts, you can use {meth}`~lamindb.Dataset.mapped` with the PyTorch `DataLoader`.\n",
     "\n",
     "It only loads batches into memory and thus allows to work with very large datasets."
    ]
@@ -110,7 +110,9 @@
    "id": "5e348b32",
    "metadata": {},
    "source": [
-    "Make a `MappedDataset` object out of `ln.Dataset`. It also does virtual inner join of the variables of the underlying `AnnData` objects."
+    "Let us create a {class}`~lamindb.dev.MappedDataset` object from {class}`~lamindb.Dataset`.\n",
+    "\n",
+    "Under-the-hood, it performs a virtual inner join of the variables of the underlying `AnnData` objects."
    ]
   },
   {
@@ -146,7 +148,7 @@
    "id": "4e46ee80",
    "metadata": {},
    "source": [
-    "This is compatible with pytorch `DataLoader` because it implements `__getitem__` over a list of `AnnData` files."
+    "This is compatible with pytorch `DataLoader` because it implements `__getitem__` over a list of backed `AnnData` objects."
    ]
   },
   {
