--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convert a number of files to a single array store"
+    "# Convert a number of array shards to a single array store"
    ]
   },
   {
@@ -20,11 +20,11 @@
    "source": [
     "In the previous notebooks, we've seen how to incrementally create a dataset and train models on it.\n",
     "\n",
-    "Once we have a dataset of validated files, we might want to create them into one big array store.\n",
+    "Once we have a dataset of validated array shards, we might want to concatenate them to one big array store.\n",
     "\n",
-    "This is what CellxGene team did for the data in the CellxGene portal: a high number of h5ad files were concatenated to give rise to a single array store.\n",
+    "This is what the CELLxGENE team does to create Census: a high number of `.h5ad` files are concatenated to give rise to a single TileDB-SOMA array store.\n",
     "\n",
-    "This requires duplicating the data that's present in a collection of `.h5ad` files, but provides the advantage that one can now query slices for arbitrary metadata, rather than just the individual files.\n",
+    "This requires duplicating the data that's present in a collection of `.h5ad` files, but speeds up ad-hoc queries for slices for arbitrary metadata.\n",
     "\n",
     "See how this looks for `cellxgene` here: {doc}`docs:cellxgene`."
    ]
