--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Standardize and append a shard of data"
+    "# Standardize and append a batch of data"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "source": [
     "Here, we'll learn \n",
     "- how to standardize a less well curated dataset\n",
-    "- how to append it as a new shard of data to the growing versioned dataset"
+    "- how to append it as a new array shard to the growing versioned dataset"
    ]
   },
   {
@@ -477,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "ManDYgmftZ8C",
