--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `AnnData` has the reference to the individual files in the `.obs` annotations:"
+    "The `AnnData` has the reference to the individual artifacts in the `.obs` annotations:"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.obs.file_uid.cat.categories"
+    "adata.obs.artifact_uid.cat.categories"
    ]
   },
   {
