--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -28,12 +28,12 @@
     "\n",
     "Here, you will:\n",
     "\n",
-    "1. read a single `.h5ad` file as an `AnnData` object and seed a growing dataset with it (![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey), current page)\n",
-    "2. append a new data shard (a new `.h5ad` file) and create a new version of this dataset ([![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)](/scrna2))\n",
-    "3. query & inspect files by metadata individually ([![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)](/scrna3))\n",
-    "4. load the dataset into memory and save analytical results ([![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)](/scrna4))\n",
+    "1. create an {class}`~lamindb.Artifact` from an `AnnData` object and seed a growing {class}`~lamindb.Dataset` with it (![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey), current page)\n",
+    "2. append a new data batch (a new `.h5ad` file) and create a new version of this dataset ([![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)](/scrna2))\n",
+    "3. query & inspect artifacts by metadata individually ([![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)](/scrna3))\n",
+    "4. load the joint dataset into memory and save analytical results ([![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)](/scrna4))\n",
     "5. iterate over the dataset, train a model, store a derived representation ([![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)](/scrna5))\n",
-    "6. discuss converting a number of files to a single TileDB SOMA store of the same data ([![scrna6/6](https://img.shields.io/badge/scrna6/6-lightgrey)](/scrna6))\n",
+    "6. discuss converting a number of artifacts to a single TileDB SOMA store of the same data ([![scrna6/6](https://img.shields.io/badge/scrna6/6-lightgrey)](/scrna6))\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ingest a file"
+    "## Ingest a artifact"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we create a {class}`~lamindb.File` object from an `AnnData`, we automatically link its features:"
+    "When we create a {class}`~lamindb.Artifact` object from an `AnnData`, we automatically link its features:"
    ]
   },
   {
@@ -165,13 +165,13 @@
    },
    "outputs": [],
    "source": [
-    "file = ln.File.from_anndata(\n",
+    "artifact = ln.Artifact.from_anndata(\n",
     "    adata,\n",
     "    field=lb.Gene.ensembl_gene_id,  # field to validate and link features\n",
     "    key=\"scrna/conde22.h5ad\",  # optional: a relative path in your default storage\n",
     "    description=\"Human immune cells from Conde22\",  # optional: a description\n",
     ")\n",
-    "file"
+    "artifact"
    ]
   },
   {
@@ -184,14 +184,14 @@
    },
    "outputs": [],
    "source": [
-    "file.save()"
+    "artifact.save()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The file has 2 linked feature sets, one for measured genes and one for measured metadata:"
+    "The artifact has 2 linked feature sets, one for measured genes and one for measured metadata:"
    ]
   },
   {
@@ -204,14 +204,14 @@
    },
    "outputs": [],
    "source": [
-    "file.features"
+    "artifact.features"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now annotate the file with labels:"
+    "Let's now annotate the artifact with labels:"
    ]
   },
   {
@@ -228,19 +228,21 @@
     "organism = lb.Organism.lookup()\n",
     "features = ln.Feature.lookup()\n",
     "\n",
-    "file.labels.add(organism.human, feature=features.organism)\n",
-    "file.labels.add(experimental_factors.single_cell_rna_sequencing, feature=features.assay)\n",
-    "file.labels.add(adata.obs.cell_type, feature=features.cell_type)\n",
-    "file.labels.add(adata.obs.assay, feature=features.assay)\n",
-    "file.labels.add(adata.obs.tissue, feature=features.tissue)\n",
-    "file.labels.add(adata.obs.donor, feature=features.donor)"
+    "artifact.labels.add(organism.human, feature=features.organism)\n",
+    "artifact.labels.add(\n",
+    "    experimental_factors.single_cell_rna_sequencing, feature=features.assay\n",
+    ")\n",
+    "artifact.labels.add(adata.obs.cell_type, feature=features.cell_type)\n",
+    "artifact.labels.add(adata.obs.assay, feature=features.assay)\n",
+    "artifact.labels.add(adata.obs.tissue, feature=features.tissue)\n",
+    "artifact.labels.add(adata.obs.donor, feature=features.donor)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The file is now validated & queryable by everything we linked:"
+    "The artifact is now validated & queryable by everything we linked:"
    ]
   },
   {
@@ -253,7 +255,7 @@
    },
    "outputs": [],
    "source": [
-    "file.describe()"
+    "artifact.describe()"
    ]
   },
   {
@@ -286,16 +288,16 @@
    },
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset(file, name=\"My versioned scRNA-seq dataset\", version=\"1\")\n",
+    "dataset = ln.Dataset(artifact, name=\"My versioned scRNA-seq dataset\", version=\"1\")\n",
     "dataset.save()\n",
-    "dataset.labels.add_from(file)  # seed the initial labels of the dataset"
+    "dataset.labels.add_from(artifact)  # seed the initial labels of the dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this version 1 of the dataset, dataset and file match each other. But they're independently tracked and queryable through their registries:"
+    "For this version 1 of the dataset, dataset and artifact match each other. But they're independently tracked and queryable through their registries:"
    ]
   },
   {
@@ -311,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Access the underlying file like so:"
+    "Access the underlying artifact like so:"
    ]
   },
   {
@@ -320,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.file"
+    "dataset.artifact"
    ]
   },
   {
@@ -356,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "Nv48yAceNSh8",
