--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -71,14 +71,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.files.df()"
+    "dataset.artifacts.df()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the dataset doesn't consist of too many files, we can now load it into memory.\n",
+    "If the dataset isn't too large, we can now load it into memory.\n",
     "\n",
     "Under-the-hood, the `AnnData` objects are concatenated during loading.\n",
     "\n",
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `AnnData` has the reference to the individual files in the `.obs` annotations:"
+    "The `AnnData` has the reference to the individual artifacts in the `.obs` annotations:"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.obs.file_uid.cat.categories"
+    "adata.obs.artifact_uid.cat.categories"
    ]
   },
   {
@@ -205,9 +205,9 @@
    },
    "outputs": [],
    "source": [
-    "file = ln.File(\"./figures/pca_itm2b.pdf\", description=\"My result on ITM2B\")\n",
-    "file.save()\n",
-    "file.view_flow()"
+    "artifact = ln.Artifact(\"./figures/pca_itm2b.pdf\", description=\"My result on ITM2B\")\n",
+    "artifact.save()\n",
+    "artifact.view_flow()"
    ]
   },
   {
