💚 Fix gene ontology

--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -32,18 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lamindb_setup\n",
-    "\n",
-    "lamindb_setup.init(storage=\"./test-gene\", schema=\"bionty\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !lamin init --storage ./test-gene --schema bionty"
+    "!lamin init --storage ./test-gene --schema bionty"
    ]
   },
   {
