--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "Here, we'll query artifacts and inspect their metadata.\n",
     "\n",
-    "This guide can be skipped if you are only interested in how to leverage the overall dataset."
+    "This guide can be skipped if you are only interested in how to leverage the overall collection."
    ]
   },
   {
@@ -269,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now subset the two datasets by shared cell types:"
+    "We can now subset the two collections by shared cell types:"
    ]
   },
   {
