--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -13,18 +13,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyze a dataset in memory"
+    "# Analyze a collection in memory"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we'll analyze the growing dataset by loading it into memory.\n",
+    "Here, we'll analyze the growing collection by loading it into memory.\n",
     "\n",
     "This is only possible if it's not too large.\n",
     "\n",
-    "If your data is large, you'll likely want to iterate over the dataset to train a model, the topic of the next page ([![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)](/scrna5))."
+    "If your data is large, you'll likely want to iterate over the collection to train a model, the topic of the next page ([![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)](/scrna5))."
    ]
   },
   {
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Dataset.filter().df()"
+    "ln.Collection.filter().df()"
    ]
   },
   {
@@ -62,7 +62,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset.filter(name=\"My versioned scRNA-seq dataset\", version=\"2\").one()"
+    "collection = ln.Collection.filter(\n",
+    "    name=\"My versioned scRNA-seq collection\", version=\"2\"\n",
+    ").one()"
    ]
   },
   {
@@ -71,20 +73,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.artifacts.df()"
+    "collection.artifacts.df()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the dataset isn't too large, we can now load it into memory.\n",
+    "If the collection isn't too large, we can now load it into memory.\n",
     "\n",
     "Under-the-hood, the `AnnData` objects are concatenated during loading.\n",
     "\n",
     "The amount of time this takes depends on a variety of factors.\n",
     "\n",
-    "If it occurs often, one might consider storing a concatenated version of the dataset, rather than the individual pieces."
+    "If it occurs often, one might consider storing a concatenated version of the collection, rather than the individual pieces."
    ]
   },
   {
@@ -93,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = dataset.load()"
+    "adata = collection.load()"
    ]
   },
   {
