--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -15,7 +15,7 @@
    "id": "6a0da8a5",
    "metadata": {},
    "source": [
-    "# Train an ML model on a dataset"
+    "# Train an ML model on a collection"
    ]
   },
   {
@@ -23,9 +23,9 @@
    "id": "5a33a86e",
    "metadata": {},
    "source": [
-    "In the [previous tutorial](scrna3), we loaded an entire dataset into memory to perform a simple analysis.\n",
+    "In the [previous tutorial](scrna3), we loaded an entire collection into memory to perform a simple analysis.\n",
     "\n",
-    "Here, we'll iterate over the artifacts within the dataset to train an ML model."
+    "Here, we'll iterate over the artifacts within the collection to train an ML model."
    ]
   },
   {
@@ -63,7 +63,7 @@
    "id": "87a94c1a",
    "metadata": {},
    "source": [
-    "Let us get our dataset:"
+    "Let us get our collection:"
    ]
   },
   {
@@ -73,8 +73,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v2 = ln.Dataset.filter(name=\"My versioned scRNA-seq dataset\", version=\"2\").one()\n",
-    "dataset_v2"
+    "collection_v2 = ln.Collection.filter(\n",
+    "    name=\"My versioned scRNA-seq collection\", version=\"2\"\n",
+    ").one()\n",
+    "collection_v2"
    ]
   },
   {
@@ -90,9 +92,9 @@
    "id": "7a6c0000",
    "metadata": {},
    "source": [
-    "If you need to train your model on a list of artifacts, you can use {meth}`~lamindb.Dataset.mapped` with the PyTorch `DataLoader`.\n",
+    "If you need to train your model on a list of artifacts, you can use {meth}`~lamindb.Collection.mapped` with the PyTorch `DataLoader`.\n",
     "\n",
-    "It only loads batches into memory and thus allows to work with very large datasets."
+    "It only loads batches into memory and thus allows to work with very large collections."
    ]
   },
   {
@@ -110,7 +112,7 @@
    "id": "5e348b32",
    "metadata": {},
    "source": [
-    "Let us create a {class}`~lamindb.dev.MappedDataset` object from {class}`~lamindb.Dataset`.\n",
+    "Let us create a {class}`~lamindb.dev.MappedCollection` object from {class}`~lamindb.Collection`.\n",
     "\n",
     "Under-the-hood, it performs a virtual inner join of the variables of the underlying `AnnData` objects."
    ]
@@ -122,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_mapped = dataset_v2.mapped(label_keys=[\"cell_type\"])"
+    "ds_mapped = collection_v2.mapped(label_keys=[\"cell_type\"])"
    ]
   },
   {
@@ -233,7 +235,7 @@
    "id": "11ea391d",
    "metadata": {},
    "source": [
-    "Close the connections in `MappedDataset`:"
+    "Close the connections in `MappedCollection`:"
    ]
   },
   {
