--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -18,9 +18,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the previous notebooks, we've seen how to incrementally create a dataset and train models on it.\n",
+    "In the previous notebooks, we've seen how to incrementally create a collection and train models on it.\n",
     "\n",
-    "Once we have a dataset of validated array shards, we might want to concatenate them to one big array store.\n",
+    "Once we have a collection of validated array shards, we might want to concatenate them to one big array store.\n",
     "\n",
     "This is what the CELLxGENE team does to create Census: a high number of `.h5ad` files are concatenated to give rise to a single TileDB-SOMA array store.\n",
     "\n",
