--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -98,7 +98,7 @@
    "source": [
     "Let us look at the standardized data of [Conde _et al._, Science (2022)](https://doi.org/10.1126/science.abl5197), available from [CZ CELLxGENE](https://cellxgene.cziscience.com/).\n",
     "\n",
-    "By calling {func}`~lamindb.dev.collections.anndata_human_immune_cells`, we load a subsampled version of the [collection from CZ CELLxGENE](https://cellxgene.cziscience.com/collections/62ef75e4-cbea-454e-a0ce-998ec40223d3) and pre-populate the corresponding LaminDB registries: {class}`~lamindb.Feature`, {class}`~lamindb.ULabel`, {class}`~lnschema_bionty.Gene`, {class}`~lnschema_bionty.CellType`, {class}`~lnschema_bionty.CellLine`, {class}`~lnschema_bionty.ExperimentalFactor`."
+    "By calling {func}`~lamindb.dev.datasets.anndata_human_immune_cells`, we load a subsampled version of the [collection from CZ CELLxGENE](https://cellxgene.cziscience.com/collections/62ef75e4-cbea-454e-a0ce-998ec40223d3) and pre-populate the corresponding LaminDB registries: {class}`~lamindb.Feature`, {class}`~lamindb.ULabel`, {class}`~lnschema_bionty.Gene`, {class}`~lnschema_bionty.CellType`, {class}`~lnschema_bionty.CellLine`, {class}`~lnschema_bionty.ExperimentalFactor`."
    ]
   },
   {
@@ -111,7 +111,7 @@
    },
    "outputs": [],
    "source": [
-    "adata = ln.dev.collections.anndata_human_immune_cells(populate_registries=True)\n",
+    "adata = ln.dev.datasets.anndata_human_immune_cells(populate_registries=True)\n",
     "adata"
    ]
   },
