--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -62,7 +62,7 @@
    },
    "outputs": [],
    "source": [
-    "adata = ln.dev.collections.anndata_pbmc68k_reduced()\n",
+    "adata = ln.dev.datasets.anndata_pbmc68k_reduced()\n",
     "adata"
    ]
   },
