🚚 Rename `Dataset` to `Collection` (#89)

--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -21,8 +21,8 @@
    "metadata": {},
    "source": [
     "Here, we'll learn \n",
-    "- how to standardize a less well curated dataset\n",
-    "- how to append it as a new array shard to the growing versioned dataset"
+    "- how to standardize a less well curated collection\n",
+    "- how to append it as a new array shard to the growing versioned collection"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now consider a dataset with less-well curated features:"
+    "Let's now consider a collection with less-well curated features:"
    ]
   },
   {
@@ -383,14 +383,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Append the shard to the dataset"
+    "## Append the shard to the collection"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query the previous dataset:"
+    "Query the previous collection:"
    ]
   },
   {
@@ -399,14 +399,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v1 = ln.Dataset.filter(name=\"My versioned scRNA-seq dataset\", version=\"1\").one()"
+    "collection_v1 = ln.Collection.filter(\n",
+    "    name=\"My versioned scRNA-seq collection\", version=\"1\"\n",
+    ").one()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a new version of the dataset by sharding it across the new `artifact` and the artifact underlying version 1 of the dataset:"
+    "Create a new version of the collection by sharding it across the new `artifact` and the artifact underlying version 1 of the collection:"
    ]
   },
   {
@@ -419,20 +421,20 @@
    },
    "outputs": [],
    "source": [
-    "dataset_v2 = ln.Dataset(\n",
-    "    [artifact, dataset_v1.artifact],\n",
-    "    is_new_version_of=dataset_v1,\n",
+    "collection_v2 = ln.Collection(\n",
+    "    [artifact, collection_v1.artifact],\n",
+    "    is_new_version_of=collection_v1,\n",
     ")\n",
-    "dataset_v2.save()\n",
-    "dataset_v2.labels.add_from(artifact)\n",
-    "dataset_v2.labels.add_from(dataset_v1)"
+    "collection_v2.save()\n",
+    "collection_v2.labels.add_from(artifact)\n",
+    "collection_v2.labels.add_from(collection_v1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Version 2 of the dataset covers significantly more conditions."
+    "Version 2 of the collection covers significantly more conditions."
    ]
   },
   {
@@ -441,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v2.describe()"
+    "collection_v2.describe()"
    ]
   },
   {
@@ -457,7 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v2.view_flow()"
+    "collection_v2.view_flow()"
    ]
   }
  ],
