--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -20,19 +20,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You'll learn how to manage a growing number of scRNA-seq data shards as a single queryable dataset.\n",
+    "You'll learn how to manage a growing number of scRNA-seq data shards as a single queryable collection.\n",
     "\n",
     "Along the way, you'll see how to create reports, leverage data lineage, and query individual data shards stored as files.\n",
     "\n",
-    "If you're only interested in _using_ a large curated scRNA-seq dataset, see the [CELLxGENE Census guide](docs:cellxgene).\n",
+    "If you're only interested in _using_ a large curated scRNA-seq collection, see the [CELLxGENE Census guide](docs:cellxgene).\n",
     "\n",
     "Here, you will:\n",
     "\n",
-    "1. create an {class}`~lamindb.Artifact` from an `AnnData` object and seed a growing {class}`~lamindb.Dataset` with it (![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey), current page)\n",
-    "2. append a new data batch (a new `.h5ad` file) and create a new version of this dataset ([![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)](/scrna2))\n",
+    "1. create an {class}`~lamindb.Artifact` from an `AnnData` object and seed a growing {class}`~lamindb.Collection` with it (![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey), current page)\n",
+    "2. append a new data batch (a new `.h5ad` file) and create a new version of this collection ([![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)](/scrna2))\n",
     "3. query & inspect artifacts by metadata individually ([![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)](/scrna3))\n",
-    "4. load the joint dataset into memory and save analytical results ([![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)](/scrna4))\n",
-    "5. iterate over the dataset, train a model, store a derived representation ([![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)](/scrna5))\n",
+    "4. load the joint collection into memory and save analytical results ([![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)](/scrna4))\n",
+    "5. iterate over the collection, train a model, store a derived representation ([![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)](/scrna5))\n",
     "6. discuss converting a number of artifacts to a single TileDB SOMA store of the same data ([![scrna6/6](https://img.shields.io/badge/scrna6/6-lightgrey)](/scrna6))\n",
     "\n",
     "```{toctree}\n",
@@ -98,7 +98,7 @@
    "source": [
     "Let us look at the standardized data of [Conde _et al._, Science (2022)](https://doi.org/10.1126/science.abl5197), available from [CZ CELLxGENE](https://cellxgene.cziscience.com/).\n",
     "\n",
-    "By calling {func}`~lamindb.dev.datasets.anndata_human_immune_cells`, we load a subsampled version of the [dataset from CZ CELLxGENE](https://cellxgene.cziscience.com/collections/62ef75e4-cbea-454e-a0ce-998ec40223d3) and pre-populate the corresponding LaminDB registries: {class}`~lamindb.Feature`, {class}`~lamindb.ULabel`, {class}`~lnschema_bionty.Gene`, {class}`~lnschema_bionty.CellType`, {class}`~lnschema_bionty.CellLine`, {class}`~lnschema_bionty.ExperimentalFactor`."
+    "By calling {func}`~lamindb.dev.datasets.anndata_human_immune_cells`, we load a subsampled version of the [collection from CZ CELLxGENE](https://cellxgene.cziscience.com/collections/62ef75e4-cbea-454e-a0ce-998ec40223d3) and pre-populate the corresponding LaminDB registries: {class}`~lamindb.Feature`, {class}`~lamindb.ULabel`, {class}`~lnschema_bionty.Gene`, {class}`~lnschema_bionty.CellType`, {class}`~lnschema_bionty.CellLine`, {class}`~lnschema_bionty.ExperimentalFactor`."
    ]
   },
   {
@@ -123,7 +123,7 @@
     "\n",
     "```{note}\n",
     "\n",
-    "In the [next guide](/scrna2), we'll curate a non-standardized dataset.\n",
+    "In the [next guide](/scrna2), we'll curate a non-standardized collection.\n",
     "\n",
     "```"
    ]
@@ -262,14 +262,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Seed a dataset"
+    "## Seed a collection"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's create a first version of a dataset that will encompass many `h5ad` files when more data is ingested.\n",
+    "Let's create a first version of a collection that will encompass many `h5ad` files when more data is ingested.\n",
     "\n",
     "```{note}\n",
     "\n",
@@ -288,16 +288,18 @@
    },
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset(artifact, name=\"My versioned scRNA-seq dataset\", version=\"1\")\n",
-    "dataset.save()\n",
-    "dataset.labels.add_from(artifact)  # seed the initial labels of the dataset"
+    "collection = ln.Collection(\n",
+    "    artifact, name=\"My versioned scRNA-seq collection\", version=\"1\"\n",
+    ")\n",
+    "collection.save()\n",
+    "collection.labels.add_from(artifact)  # seed the initial labels of the collection"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this version 1 of the dataset, dataset and artifact match each other. But they're independently tracked and queryable through their registries:"
+    "For this version 1 of the collection, collection and artifact match each other. But they're independently tracked and queryable through their registries:"
    ]
   },
   {
@@ -306,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.describe()"
+    "collection.describe()"
    ]
   },
   {
@@ -322,7 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.artifact"
+    "collection.artifact"
    ]
   },
   {
@@ -338,7 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.view_flow()"
+    "collection.view_flow()"
    ]
   }
  ],
