--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = ln.Transform.filter(uid=\"Nv48yAceNSh8z8\").one()"
+    "transform = ln.Transform.filter(uid=\"Nv48yAceNSh86K79\").one()"
    ]
   },
   {
