--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "Here, you will:\n",
     "\n",
-    "1. create an {class}`~lamindb.Artifact` from an `AnnData` object and seed a growing [Collection](https://lamin.ai/docs/lamindb.collection) with it (![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey), current page)\n",
+    "1. create an {class}`~lamindb.Artifact` from an `AnnData` object and seed a growing {class}`~lamindb.Collection` with it (![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey), current page)\n",
     "2. append a new data batch (a new `.h5ad` file) and create a new version of this collection ([![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)](/scrna2))\n",
     "3. query & inspect artifacts by metadata individually ([![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)](/scrna3))\n",
     "4. load the joint collection into memory and save analytical results ([![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)](/scrna4))\n",
