--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ingest a artifact"
+    "## Ingest an artifact"
    ]
   },
   {
@@ -331,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See data flow:"
+    "See data lineage:"
    ]
   },
   {
@@ -340,7 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection.view_flow()"
+    "collection.view_lineage()"
    ]
   }
  ],
@@ -369,7 +369,7 @@
    "user_handle": "testuser2",
    "user_id": "bKeW4T6E",
    "user_name": "Test User2",
-   "version": "0"
+   "version": "1"
   },
   "vscode": {
    "interpreter": {
