--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -376,7 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.view_flow()"
+    "artifact.view_lineage()"
    ]
   },
   {
@@ -450,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "View the flow:"
+    "View data lineage:"
    ]
   },
   {
@@ -459,7 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection_v2.view_flow()"
+    "collection_v2.view_lineage()"
    ]
   }
  ],
@@ -489,7 +489,7 @@
    "user_handle": null,
    "user_id": null,
    "user_name": null,
-   "version": "0"
+   "version": "1"
   }
  },
  "nbformat": 4,
