--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Transform.filter(created_by=users.testuser1).search(\"scrna\")"
+    "ln.Transform.filter(created_by=users.falexwolf).search(\"scrna\")"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = ln.Transform.filter(uid=\"Nv48yAceNSh86K79\").one()"
+    "transform = ln.Transform.filter(uid=\"Nv48yAceNSh85zKv\").one()"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact1.view_flow()"
+    "artifact1.view_lineage()"
    ]
   },
   {
@@ -179,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact2.view_flow()"
+    "artifact2.view_lineage()"
    ]
   },
   {
@@ -299,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "agayZTonayqA",
@@ -309,7 +309,7 @@
    "user_handle": "sunnyosun",
    "user_id": "kmvZDIX9",
    "user_name": "Sunny Sun",
-   "version": "0"
+   "version": "1"
   }
  },
  "nbformat": 4,
