--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Transform.filter(created_by=users.falexwolf).search(\"scrna\")"
+    "ln.Transform.filter(created_by=users.testuser1).search(\"scrna\")"
    ]
   },
   {
