--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -209,7 +209,7 @@
    "source": [
     "artifact = ln.Artifact(\"./figures/pca_itm2b.pdf\", description=\"My result on ITM2B\")\n",
     "artifact.save()\n",
-    "artifact.view_flow()"
+    "artifact.view_lineage()"
    ]
   },
   {
