--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -81,7 +81,6 @@
     "import lnschema_bionty as lb\n",
     "\n",
     "ln.settings.verbosity = \"hint\"\n",
-    "lb.settings.organism = \"human\"\n",
     "ln.track()"
    ]
   },
@@ -170,6 +169,7 @@
     "    field=lb.Gene.ensembl_gene_id,  # field to validate and link features\n",
     "    key=\"scrna/conde22.h5ad\",  # optional: a relative path in your default storage\n",
     "    description=\"Human immune cells from Conde22\",  # optional: a description\n",
+    "    organism=\"human\",  # or set globally: lb.settings.organism = \"human\"\n",
     ")\n",
     "artifact"
    ]
