Show virtual outer join

--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -132,13 +132,50 @@
    "id": "684fdb1c",
    "metadata": {},
    "source": [
-    "The intersected variable names can be accessed:"
+    "By default `join_vars=\"auto\"` in `.mapped`. This does't perform any joins if the variables are the same, does virtual inner join if the intersection of variables is nonempty and virtual outer join otherwise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00a17c3d",
+   "metadata": {},
+   "source": [
+    "Here `join_vars=\"auto\"` selects virtual inner join. The intersected variable names can be accessed:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "354f955c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(ds_mapped.var_joint)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "982b8f94",
+   "metadata": {},
+   "source": [
+    "You can also pass `join_vars` explicitly to perform the selected variant of virtual join."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15f6caaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_mapped.close()\n",
+    "ds_mapped = collection_v2.mapped(label_keys=[\"cell_type\"], join_vars=\"outer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a736b129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.17"
   },
   "nbproject": {
    "id": "Qr1kIHvK506r",
