--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "Here, we'll learn \n",
     "- how to standardize a less well curated collection\n",
-    "- how to append it as a new array shard to the growing versioned collection"
+    "- how to append it to the growing versioned collection"
    ]
   },
   {
@@ -35,6 +35,7 @@
     "import lnschema_bionty as lb\n",
     "\n",
     "ln.settings.verbosity = \"hint\"\n",
+    "lb.settings.auto_save_parents = False\n",
     "ln.track()"
    ]
   },
