--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Collection.filter().df()"
+    "ln.Collection.df()"
    ]
   },
   {
