--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -121,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = collection.mapped(label_keys=[\"cell_type\"], join_vars=\"outer\")"
+    "dataset = collection.mapped(label_keys=[\"cell_type\"], join=\"outer\")"
    ]
   },
   {
@@ -207,7 +207,7 @@
     "sampler = WeightedRandomSampler(\n",
     "    weights=dataset.get_label_weights(\"cell_type\"), num_samples=len(dataset)\n",
     ")\n",
-    "dl = DataLoader(dataset, batch_size=128, sampler=sampler)"
+    "dataloader = DataLoader(dataset, batch_size=128, sampler=sampler)"
    ]
   },
   {
@@ -225,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for batch in dl:\n",
+    "for batch in dataloader:\n",
     "    pass"
    ]
   },
@@ -255,12 +255,12 @@
     ":::{dropdown} In practice, use a context manager\n",
     "\n",
     "```\n",
-    "with ds_train.mapped(label_keys=[\"cell_type\"]) as ds_mapped:\n",
+    "with collection.mapped(label_keys=[\"cell_type\"]) as dataset:\n",
     "    sampler = WeightedRandomSampler(\n",
-    "        weights=ds_mapped.get_label_weights(\"cell_type\"), num_samples=len(ds_mapped)\n",
+    "        weights=dataset.get_label_weights(\"cell_type\"), num_samples=len(dataset)\n",
     "    )\n",
-    "    dl = DataLoader(ds_mapped, batch_size=128, sampler=sampler)\n",
-    "    for batch in dl:\n",
+    "    dataloader = DataLoader(dataset, batch_size=128, sampler=sampler)\n",
+    "    for batch in dataloader:\n",
     "        pass\n",
     "```\n",
     ":::"
