--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -60,7 +60,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f232d65e",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "collection = ln.Collection.filter(\n",
@@ -103,7 +107,7 @@
    "outputs": [],
    "source": [
     "with collection.mapped(label_keys=[\"cell_type\"], join=\"inner\") as dataset:\n",
-    "    print(dataset.var_joint)"
+    "    print(len(dataset.var_joint))"
    ]
   },
   {
